karl package Changelog
======================

Unreleased
----------

- ...

3.12 (2009-08-19)
-----------------

- LP #413137 Export as CSV was producing a unicode header; WSGI only accepts
  byte strings.

- LP #399427 Removed send_alert field from ICommunityContent interface.

- LP #399427 Allow use of default for Alerts utility, making registration
  unnecessary except to shim in a dummy test implementation in unittests.

- LP #412463 Publish atom feeds as escaped HTML rather than embedded XHTML.

3.11 (2009-08-17)
-----------------

- LP #414799 Made system name configurable in Karl error page wsgi middleware.

- LP #414799 Scrubbed 'KARL' from UI.

3.10 (2009-08-12)
-----------------

- LP #412478 In mail-in, replace empty message body with warning message.

3.9 (2009-08-11)
----------------

- LP #408946: Give visual LS feedback and pause on multiple words

- LP #409495: Fix broken General KARL Error Screen in IE

- Disabled browser form autocomplete in the add user form (without this,
  the browser fills the password field with the current user's password).

- Log more info about dropped email messages.

- Made the mail white list case-insensitive.

3.8 (2009-08-06)
----------------

- Removed OSI-specific change password link logic from edit_profile view.

- The peopleconf utility now has the option to force reindexing of the
  people directory catalog.

- LP #409408: IE refuses to download files over HTTPS when the
  Cache-Control header specifies no-cache or no-store.  Switched to
  "private, must-revalidate", which seems to be the generally
  recommended header for dynamic apps.

- LP #409499: Reference Manual delete produces TypeError


3.7 (2009-08-04)
----------------

- LP #407445: Provide rounded corners on tag boxes in IE

- LP #403648: Fix right margin in IE on anonymous layout

- Use the newer ISecurityWorkflow API (pass request in to all relevant
  methods).

- LP #404205: For the new people directory, renamed the unconfigured